# satexplorer

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  clausechecker.py  cligToCNF.py  clustering.py  cmake_install.cmake  cnfToGML.py  requirements.txt  satexplorer.cbp  tracefileviewer.sh  vigtographml.py
graphdrawer/: CMakeLists.txt  Makefile  cfg.cpp  cfg.hpp  cmake_install.cmake  main.cpp
ogdfWrapper/: CMakeLists.txt  ogdfVector.hpp  ogdfWrapper.cpp  ogdfWrapper.hpp  types.hpp
ogdf_installation/: CompressSVG.patch  PKGBUILD  README  README.md  RemoveAsserts.patch  adjList.patch  generate_PKGBUILD_patch.sh  install  ogdf-git.patch
satviewer/: CMakeLists.txt  Makefile  SatWindow.cpp  SatWindow.h  SatWindow.hpp  SelectionSvgWidget.cpp  SelectionSvgWidget.hpp  Stepper.cpp  Stepper.h  Stepper.hpp  cmake_install.cmake  main.cpp
scripts/: clausechecker.py  cli.py  cligToCNF.py  cnf.py  cnfToGML.py  cnfToImplicationGML.py  louvain_clustering.py  renamable_horn.py  satlib.py  schaefer_backdoor_class_test.py  vigToCNF.py  vigToGML.py  vigtogml.py
tseytin/: CMakeLists.txt  main.cpp
